# web-rs

./: .gitignore  README.md
.lh/blog-fe/src/: App.vue.json
.lh/blog-fe/src/router/: index.ts.json
.lh/blog-fe/src/views/: ArticleView.vue.json  BlogHome.vue.json
blog-fe/: .gitignore  README.md  index.html  package.json  tsconfig.json
blog-fe/src/: App.vue  main.ts
blog-fe/src/router/: index.ts
blog-fe/src/views/: ArticleView.vue  BlogHome.vue  LoginView.vue  RegisterView.vue
fe-template/: index.html  package.json
fe-template/src/: App.vue  main.ts
fe-template/src/router/: index.ts
fe-template/src/views/: Home.vue
web-be/: .gitignore  Cargo.toml  postman.json
web-be/sql/: mysql.sql
web-be/src/: init.rs  jwt.rs  main.rs  router.rs
web-be/src/ao/: hello_world_ao.rs  mail_ao.rs  mod.rs
web-be/src/config/: config.rs  config.yaml  mod.rs  yaml_config.rs
web-be/src/controller/: article.rs  auth.rs  authenticate.rs  hello_world.rs  mail.rs  mod.rs
web-be/src/lib/: mail.rs  mod.rs  mongodb.rs  mysql.rs  redis.rs
web-be/src/repository/: mod.rs
web-be/src/repository/mongodb/: mod.rs  user_article.rs
web-be/src/repository/mysql/: mod.rs  user.rs  user_article.rs
web-be/src/repository/redis/: auth.rs  mod.rs
web-be/src/service/: article.rs  auth.rs  hello_world.rs  mod.rs
web-be/src/structs/: global_response.rs  mod.rs  request_response.rs
web-be/src/utils/: jwt.rs  mod.rs  rand.rs
web-be/src/vo/: hello_world_vo.rs  mod.rs
web-fe/: README.md  package-lock.json  package.json
web-fe/src/: App.vue
