[package]
name = "web-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers"] }
tokio = { version = "1.23.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
