[package]
name = "web-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers"] }
tokio = { version = "1.23.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde_yaml = "0.9.14"
chrono = "0.4.23"
lazy_static = "1.4.0"
lettre = "0.10"
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
futures = "0.3.25"
mongodb = {version = "2.3.1", features = ["tokio-runtime"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }